Update CSS and job talk

--- a/job-talk/_metadata.yml
+++ b/job-talk/_metadata.yml
@@ -1,5 +1,5 @@
-title: "Talk Template"
-subtitle: "Some Subtitle"
+title: "Human ~~Computer~~ Data Interaction"
+subtitle: "Statistics, Graphics, Algorithms, and Applications"
 author: "Susan Vanderplas"
 date: 2026-01-01
 date-format: long
